k8s/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    service: django
spec:
  selector:
    app: chat-django-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: websockets
  labels:
    service: websockets
spec:
  selector:
    app: chat-websocket-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
