k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: front-interface
  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - "chat.laammaar.site"
    secretName: letsencrypt-prod
  rules:
  - host: chat.laammaar.site  # foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: django
          servicePort: 80
      - path: /ws
        backend:
          serviceName: websockets
          servicePort: 80
